overflow: auto for collection bulk actions to prevent overflow on narrow displays

--- a/src/components/collection/records/CollectionRecordsBulkActions.css
+++ b/src/components/collection/records/CollectionRecordsBulkActions.css
@@ -1,6 +1,7 @@
 .collection-records-bulk-actions {
   display: flex;
   align-items: center;
+  overflow: auto;
 }
 
 .collection-records-bulk-actions > span:first-of-type {
